# MultiChSync

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
Data/: .gitignore
config/: logging.yaml
docs/: README.md
docs/en/: README.md
docs/en/api/: index.md
docs/en/architecture/: overview.md
docs/en/contributing/: CODE_STYLE.md  agents.md
docs/en/guides/: ecg_conversion.md  eeg_conversion.md  fnirs_conversion.md  installation.md  marker_processing.md  quality_assessment.md  quickstart.md
docs/en/technical/: event_matching_analysis.md  fnirs_signal_level_qc_metrics.md
docs/zh/: README.md
docs/zh/development/: debug_notes_2026-04-13.md  scripts_analysis.md
docs/zh/guides/: ecg_conversion.md  eeg_conversion.md  fnirs_conversion.md  installation.md  marker_processing.md  quality_assessment.md  quickstart.md
examples/: fnirs_example.py  quality_example.py
multichsync/: __init__.py  cli.py
multichsync/ecg/: __init__.py  batch.py  converter.py  parser.py  writer.py
multichsync/eeg/: __init__.py  batch.py  converter.py  parser.py  writer.py
multichsync/fnirs/: __init__.py  batch.py  converter.py  mne_patch.py  parser.py  writer.py
multichsync/marker/: __init__.py  adjust_offsets.py  extractor.py  info_extractor.py  matchcrop.py  matchcrop_aligned.py  matcher.py  timeline_cropper.py
multichsync/quality/: __init__.py  assessor.py  visualization.py
multichsync/utils/: __init__.py
scripts/: rename_to_bids.py
scripts/analysis/: README.md
scripts/development/: README.md  move_docs.py  move_tests.py
tests/: .coveragerc  conftest.py  test_adjust_offsets.py  test_get_raw_data_duration.py  test_matchcrop.py  test_matchcrop_aligned.py  test_matchcrop_aligned_e2e.py
tests/fixtures/: __init__.py
tests/fixtures/ecg/: __init__.py
tests/fixtures/eeg/: __init__.py
tests/fixtures/fnirs/: __init__.py
tests/integration/: test_batch_processing.py  test_cli.py  test_quality_batch.py  test_sync.py
tests/unit/: test_ecg_converter.py  test_eeg_converter.py  test_fnirs_converter.py  test_fnirs_writer.py  test_marker_cleaning.py  test_marker_extractor.py  test_marker_info_extractor.py  test_marker_matcher.py  test_quality.py
